# FUPLA-droneSIM

./: .gitignore  .gitmodules  README.md
config/px4/: sitl_params.yaml
docker/: Dockerfile  docker-compose.yml
src/fupla_bringup/: package.xml  setup.cfg  setup.py
src/fupla_bringup/launch/: add_drone.launch.py  sim.launch.py  swarm.launch.py
src/fupla_joy/: package.xml  setup.cfg  setup.py
src/fupla_joy/fupla_joy/: node_joy_diag.py  node_joy_to_rc.py  node_px4_configurator.py  node_swarm_gui.py  stream_to_qgc.py
src/fupla_mavlink/: package.xml  setup.cfg  setup.py
src/fupla_mavlink/fupla_mavlink/: node_mavlink_hub.py
tools/: install.sh  open_terminal.sh  run_px4_instance.sh
